test/fails/bad_geo/geops3.lgl
declare float cos(float f);
declare float sqrt(float f);
declare float acos(float f);

prototype {
    object point<r>;
    object vector<r>;

    vector<r> +(vector<r> x, vector<r> y);
    vector<r> -(vector<r> x, vector<r> y);
    vector<r> *(vector<r> v, scalar<r> s);
    vector<r> *(scalar<r> s, vector<r> v);
    vector<r> -(vector<r> v);
    position<r> translate(position<r> p, vector<r> v);
    point<r> +(point<r> p, vector<r> v);
    point<r> -(point<r> p, vector<r> v);
    vector<r> -(point<r> x, point<r> y);
    vector<r> -(point<r> x);
}
coord hom {
    dimension 3;
    object point = float[4];
    object vector = float[4];

    vector<r> +(vector<r> x, vector<r> y) {
        return [x[0] + y[0], x[1] + y[1], x[2] + y[4], 0.]; // 4 is out of bounds
    }
    vector<r> -(vector<r> x, vector<r> y) {
        return [x[0] - y[0], x[1] - y[1], x[2] - y[2], 0.];
    }
    vector<r> *(vector<r> v, scalar<r> s) {
        return [x[0] * s, x[1] * s, x[2] * s, 0.];
    }
    vector<r> *(scalar<r> s, vector<r> v) {
        return [s * x[0], s * x[1], s * x[2], 0.];
    }
    vector<r> -(vector<r> v) {
        return [s * x[0], s * x[1], s * x[2], 0.];
    }
    point<r> translate(point<r> p, vector<r> v) {
        return p + v * p[3];
    }
    point<r> +(point<r> p, vector<r> v) {
        return p + v * p[3];
    }
    point<r> -(point<r> p, vector<r> v) {
        return p - v * p[3];
    }
    vector<r> -(point<r> x, point<r> y) {
        return x * y[3] + y * x[3];
    }
}

frame world is float[3];
frame plane is float[2];

void main() {
    cart2.point<plane> ppos = [1., 1.];
    cart2.vector<plane> poffset = [1., 2.];

    print pos + offset;
    print 2. * (pos - (pos + offset));
    
    cart3.vector<world> mpos = [1., 2., 3.];
    
    print mpos - mpos * 2.;

    polar.vector<plane> ppo = [1., 3.14159265];
    polar.vector<plane> ppo2 = [1., 0.];
    
    print 3. * ppo * 2.;
    print ppo + ppo2;

    hom.point<world> hpos = [1., 2., 3., 2.];
    hom.vector<world> hvec = [1., 1., 1., 0.];

    print hpos + hvec * 2;
    print hpos - (hpos + hvec);
}
